# Basics-of-Radio-Propagation-for-Digital-Mobile-Communications-with-Jupyter

./: LICENSE  README.md  environment.yml  piyo.ipynb  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/meep/: Dockerfile  devcontainer.json
.devcontainer/sionna/: devcontainer.json
notebook/2-無線伝送の基本式/sionna/: 2.1.friss_transmission_equation.ipynb  2.2EIRP.ipynb  2.3.earth_reflection.ipynb
notebook/4-伝送路の表現/: 4.impulse_and_frequency_response.ipynb  4.impulse_and_frequency_response_dipole.ipynb
