[project]
name = "basics-of-radio-propagation-for-digital-mobile-communications-with-jupyter"
version = "0.1.0"
package-mode = false
description = ""
authors = [
    {name = "ReiRev",email = "reirev2913@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
